# fruit-DL

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  check_data.py  docker-compose.yml  plan.md  predict.py  pyproject.toml  split_dataset.py  train.py
